# OMNIXIUS

./: .cursorrules  .gitignore  Cargo.toml  LOG.md  SAVE_AND_PUSH.bat  docker-compose.yml
.cargo/: config.toml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/api/: l1.rs  l3.rs  l4.rs  mod.rs
backend/src/database/: mod.rs  models.rs
backend/src/layers/: l1_chronos.rs  l3_phoenix.rs  l4_oikoumene.rs  mod.rs
backend/src/middleware/: auth.rs
docs/: TECH_REPORT_REBOOT.md
examples/: demo_run.rs
frontend/: next.config.js  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/economy/: page.tsx
frontend/src/app/evolution/: page.tsx
frontend/src/app/game/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: EvolutionPanel.tsx  GameCanvas.tsx  Header.tsx  Leaderboard.tsx  OrganismCard.tsx  Wallet.tsx
frontend/src/lib/: api.ts  auth.ts  types.ts
frontend/src/styles/: globals.css
layers/L-1_energy/: quantum_fields.rs
layers/L0_quantum/: quantum_mutator.rs  quantum_ops.rs
layers/L1_chronos/: chronos_storage.rs  economy.rs  genesis.move
layers/L2_noosphere/: academy.rs  ai_oracle.rs  investments.rs  quests.rs
layers/L3_organisms/O4_day_mohk/: phoenix_engine.rs
layers/L4_oikoumene/: auth.rs  social.rs
layers/L5_telesophy/: communication.rs
layers/L6_astra/: day_mohk.rs  events.rs
omnixius_ui/: package-lock.json  package.json  tailwind.config.js
omnixius_ui/public/: manifest.json
omnixius_ui/src/app/: globals.css  layout.tsx  page.tsx
omnixius_ui/src/components/: AuthModal.tsx  DayMohkGame.tsx  DnaModal.tsx  ParticleBackground.tsx  UniverseMap.tsx
src/: lib.rs  main.rs
