[package]
name = "omnixius"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "omnixius_server"
path = "src/main.rs"

[dependencies]
# Core
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

# Web Server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Auth & Security
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

# Database - Fixed version to avoid const-oid issue
sqlx = { version = "=0.8.5", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "chrono"] }
