[package]
name = "omnixius-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["headers", "macros", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
thiserror = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
anyhow = "1.0"

[dev-dependencies]
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "offline"] }
